<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.manomanitas.tecnicosapp.LoginActivity"
    android:baselineAligned="false"
    android:background="@color/background_manomanitas"
    android:gravity="center_vertical">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress_login"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        android:layout_gravity="center" />

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:id="@+id/imageView"
            android:src="@drawable/loginlogo"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:textColorHint="@color/colorPrimary"
            android:layout_height="match_parent"
            android:id="@+id/view_correo_login"
            android:layout_marginBottom="6dp">

            <AutoCompleteTextView
                android:id="@+id/email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_login"
                android:hint="@string/prompt_email_signIn"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:gravity="center"
                android:autoText="false" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"></LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:textColorHint="@color/colorPrimary"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_login"
                android:hint="@string/prompt_password_signIn"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short_signIn"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:autoText="false"
                android:gravity="center" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/email_sign_in_button_login"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="25dp"
            android:text="@string/action_sign_in_signIn"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:background="@drawable/border_button_entrar"
            android:textSize="@dimen/sizeTextBt"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/login_form_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

    </ScrollView>

</LinearLayout>
