<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.manomanitas.tecnicosapp.MenuActivity"
    android:background="@color/background_manomanitas">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/idPresupuestos"
            android:text="@string/menu_presupuestos"
            android:textColor="@android:color/primary_text_light"
            android:background="@drawable/border_button"
            android:gravity="left|center_vertical"
            android:paddingLeft="20sp"
            android:textSize="@dimen/sizeTextBt"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="true"
            android:onClick="onClick_presupuestos" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_comprados"
            android:id="@+id/idComprados"
            android:textColor="@android:color/primary_text_light"
            android:background="@drawable/border_button"
            android:gravity="left|center_vertical"
            android:paddingLeft="20sp"
            android:textSize="@dimen/sizeTextBt"
            android:layout_below="@+id/idPresupuestos"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="true"
            android:onClick="onClick_comprados" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_perfil"
            android:id="@+id/idMiPerfil"
            android:textColor="@android:color/primary_text_light"
            android:background="@drawable/border_button"
            android:gravity="left|center_vertical"
            android:paddingLeft="20sp"
            android:textSize="@dimen/sizeTextBt"
            android:layout_below="@+id/idComprados"
            android:layout_alignParentRight="false"
            android:layout_alignParentEnd="true"
            android:onClick="onClick_miPerfil" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cerrar_sesion"
            android:id="@+id/idCerrarSesion"
            android:textColor="@android:color/primary_text_light"
            android:background="@drawable/border_button"
            android:gravity="left|center_vertical"
            android:paddingLeft="20sp"
            android:textSize="@dimen/sizeTextBt"
            android:onClick="onClick_cerrarSesion"
            android:layout_below="@+id/idMiPerfil"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="true"
            android:layout_marginTop="45dp" />
    </LinearLayout>


</RelativeLayout>
